Fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -33,10 +33,12 @@ a {
 .column.info {
     flex-direction: column;
     align-items: center;
+    padding-bottom: 0;
 }
 .column.previews {
     flex-direction: row;
     align-items: center;
+    overflow: hidden;
 }
 .column.previews img {
     height: 500px;
@@ -47,7 +49,7 @@ a {
 .logo {
     margin-left: -10px;
     width: 500px;
-    max-width: 100vw;
+    max-width: 90vw;
 }
 .download-buttons {
     margin-top: 10px;
